; ModuleID = '/home/carl/AnghaBench/libgit2/tests/network/extr_refspecs.c_assert_invalid_transform.c'
source_filename = "/home/carl/AnghaBench/libgit2/tests/network/extr_refspecs.c_assert_invalid_transform.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@GIT_BUF_INIT = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*, i8*)* @assert_invalid_transform to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @assert_invalid_transform(i8* %0, i8* %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store i8* %0, i8** %3, align 8
  store i8* %1, i8** %4, align 8
  %7 = load i32, i32* @GIT_BUF_INIT, align 4
  store i32 %7, i32* %6, align 4
  %8 = load i8*, i8** %3, align 8
  %9 = call i32 @git_refspec__parse(i32* %5, i8* %8, i32 1)
  %10 = load i8*, i8** %4, align 8
  %11 = call i32 @git_refspec_transform(i32* %6, i32* %5, i8* %10)
  %12 = call i32 @cl_git_fail(i32 %11)
  %13 = call i32 @git_buf_dispose(i32* %6)
  %14 = call i32 @git_refspec__dispose(i32* %5)
  ret void
}

declare dso_local i32 @git_refspec__parse(i32*, i8*, i32) #1

declare dso_local i32 @cl_git_fail(i32) #1

declare dso_local i32 @git_refspec_transform(i32*, i32*, i8*) #1

declare dso_local i32 @git_buf_dispose(i32*) #1

declare dso_local i32 @git_refspec__dispose(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
